ajuste de selecao de bomba de abastecimento

--- a/public/partials/_home.html
+++ b/public/partials/_home.html
@@ -9,28 +9,28 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-6 col-md-6">
-                            <a href="#/home" class="btn btn-danger btn-lg" role="button">
+                            <a href="#/record-sales/1" class="btn btn-danger btn-lg" role="button">
                                 <span class="glyphicon glyphicon-list-alt"></span>
                                 <br>Bomba 1</a>
-                            <a href="#/home" class="btn btn-danger btn-lg" role="button">
+                            <a href="#/record-sales/2" class="btn btn-danger btn-lg" role="button">
                                 <span class="glyphicon glyphicon-list-alt"></span>
                                 <br>Bomba 2</a>
-                            <a href="#/home" class="btn btn-danger btn-lg" role="button">
+                            <a href="#/record-sales/3" class="btn btn-danger btn-lg" role="button">
                                 <span class="glyphicon glyphicon-list-alt"></span>
                                 <br>Bomba 3</a>
-                            <a href="#/home" class="btn btn-danger btn-lg" role="button">
+                            <a href="#/record-sales/4" class="btn btn-danger btn-lg" role="button">
                                 <span class="glyphicon glyphicon-list-alt"></span>
                                 <br>Bomba 4</a>
-                            <a href="#/home" class="btn btn-danger btn-lg" role="button">
+                            <a href="#/record-sales/5" class="btn btn-danger btn-lg" role="button">
                                 <span class="glyphicon glyphicon-list-alt"></span>
                                 <br>Bomba 5</a>                            
-                            <a href="#/home" class="btn btn-danger btn-lg" role="button">
+                            <a href="#/record-sales/6" class="btn btn-danger btn-lg" role="button">
                                 <span class="glyphicon glyphicon-list-alt"></span>
                                 <br>Bomba 6</a>
-                            <a href="#/home" class="btn btn-danger btn-lg" role="button">
+                            <a href="#/record-sales/7" class="btn btn-danger btn-lg" role="button">
                                 <span class="glyphicon glyphicon-list-alt"></span>
                                 <br>Bomba 7</a>
-                            <a href="#/home" class="btn btn-danger btn-lg" role="button">
+                            <a href="#/record-sales/8" class="btn btn-danger btn-lg" role="button">
                                 <span class="glyphicon glyphicon-list-alt"></span>
                                 <br>Bomba 8</a>
                         </div>
@@ -47,8 +47,7 @@
                                 <br>Cx. Aberto</a>
                         </div>
                     </div>
-                    <a href="#/record-sales" class="btn btn-success btn-lg btn-block" role="button">
-                        <span class="glyphicon glyphicon-bookmark"></span> REGISTRAR VENDA</a>
+                    
                 </div>
             </div>
         </div>
