--- a/public/partials/_record-sales.html
+++ b/public/partials/_record-sales.html
@@ -6,22 +6,22 @@
                     <form action="#" method="post" class="form" role="form">
                         <div class="row">
                             <div class="col-xs-6 col-md-6">
-                                <input class="form-control" name="firstname" placeholder="Placa/Cliente" type="text" required="" autofocus="">
+                                <input class="form-control" name="placa" placeholder="Placa/Cliente" type="text" required="" autofocus="">
                             </div>
                             <div class="col-xs-6 col-md-6">
-                                <input class="form-control" name="lastname" placeholder="Qtde Listros" type="text" required="">
+                                <input class="form-control" name="qtdelitros" placeholder="Qtde Listros" type="text" required="">
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-6 col-md-6">
-                                <input class="form-control" name="firstname" placeholder="Num. Bomba" type="text" required="" >
+                                <input class="form-control" name="numbomba" placeholder="Num. Bomba" type="text" required="" ng-model="recordsales.numbomba">
                             </div>
                             <div class="col-xs-6 col-md-6">
-                                <input class="form-control" name="lastname" placeholder="Operador" type="text" required="">
+                                <input class="form-control" name="operador" placeholder="Operador" type="text" required="">
                             </div>
                         </div>
                         
-                        <textarea class="form-control" name="password" placeholder="Descrição/Histórico" type="password" ></textarea>
+                        <textarea class="form-control" name="historico" placeholder="Descrição/Histórico" type="password" ></textarea>
 
                         <br>
                         <button class="btn btn-lg btn-primary btn-block" type="submit">
