--- a/public/partials/_record-sales.html
+++ b/public/partials/_record-sales.html
@@ -1,33 +1,49 @@
- <div class="container">
-        <div class="row">
-            <div class="col-sm-6 col-md-6 col-md-offset-3">
-                <div class="account-wall" style="padding: 20px;">
-                    <legend><a href="#"><i class="glyphicon glyphicon-globe"></i></a> Registrar Venda</legend>
-                    <form action="#" method="post" class="form" role="form">
-                        <div class="row">
-                            <div class="col-xs-6 col-md-6">
-                                <input class="form-control" name="placa" placeholder="Placa/Cliente" type="text" required="" autofocus="">
-                            </div>
-                            <div class="col-xs-6 col-md-6">
-                                <input class="form-control" name="qtdelitros" placeholder="Qtde Listros" type="text" required="">
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6 col-md-6 col-md-offset-3">
+            <div class="account-wall" style="padding: 20px;">
+                <legend><a href="#"><i class="glyphicon glyphicon-globe"></i></a> Registrar Venda</legend>
+                <form action="#" method="post" class="form" role="form" name="recordsalesFrm">
+                    <div class="row">
+                        <div class="col-xs-6 col-md-6">
+                            <input class="form-control" name="numbomba" placeholder="Num. Bomba" type="text" required="" ng-model="recordsales.numbomba">
+                        </div>
+                        <div class="col-xs-6 col-md-6">
+                            <input class="form-control" name="operador" placeholder="Operador" type="text" required="" ng-model="recordsales.user">
+                        </div>
+                    </div>
+                    <div class="row" ng-show="recordsales.obj.cliente">
+                        <div class="well well-sm">
+                            <div class="media">
+                                <a class="thumbnail pull-left" href="#">
+                                    <img class="media-object" src="http://critterapp.pagodabox.com/img/user.jpg">
+                                </a>
+                                <div class="media-body">
+                                    <h4 class="media-heading">{{recordsales.obj.cliente.nome}}</h4>
+                                    <p>
+                                        <span class="label label-info">Saldo {{recordsales.obj.cliente.saldo | currency}}</span>
+                                        <span class="label label-success">{{recordsales.obj.cliente.liberado}}</span>
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-xs-6 col-md-6">
-                                <input class="form-control" name="numbomba" placeholder="Num. Bomba" type="text" required="" ng-model="recordsales.numbomba">
-                            </div>
-                            <div class="col-xs-6 col-md-6">
-                                <input class="form-control" name="operador" placeholder="Operador" type="text" required="">
-                            </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6 col-md-6">
+                            <input class="form-control" name="cliente" placeholder="Placa ex.(ABC1234)" type="text" required="" autofocus="" ng-change="validaCliente()" ng-model="recordsales.cliente">
                         </div>
-                        
-                        <textarea class="form-control" name="historico" placeholder="Descrição/Histórico" type="password" ></textarea>
 
-                        <br>
-                        <button class="btn btn-lg btn-primary btn-block" type="submit">
-                            Ok</button>
-                    </form>
-                </div>
+                        <div class="col-xs-6 col-md-6">
+                            <input class="form-control" name="qtdelitros" placeholder="Qtde Listros" type="text" required="" ng-model="recordsales.qtdelitros">
+                        </div>
+                    </div>
+
+                    <textarea class="form-control" name="historico" placeholder="Descrição/Histórico" ng-model="recordsales.historico"></textarea>
+                    <br>
+                    <button class="btn btn-lg btn-primary btn-block" type="submit" ng-disabled="recordsalesFrm.$invalid">
+                        Ok</button>
+                </form>
             </div>
         </div>
     </div>
+</div>
