--- a/public/partials/_home.html
+++ b/public/partials/_home.html
@@ -4,7 +4,7 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <h3 class="panel-title">
-                        <span class="glyphicon glyphicon-bookmark"></span> ABASTECIMENTO</h3>
+                        <span class="glyphicon glyphicon-bookmark"></span>ABASTECIMENTO</h3>
                 </div>
                 <div class="panel-body">
                     <div class="row">
@@ -23,7 +23,7 @@
                                 <br>Bomba 4</a>
                             <a href="#/record-sales/5" class="btn btn-danger btn-lg" role="button">
                                 <span class="glyphicon glyphicon-list-alt"></span>
-                                <br>Bomba 5</a>                            
+                                <br>Bomba 5</a>
                             <a href="#/record-sales/6" class="btn btn-danger btn-lg" role="button">
                                 <span class="glyphicon glyphicon-list-alt"></span>
                                 <br>Bomba 6</a>
@@ -41,13 +41,30 @@
                             <a href="#/input-supply" class="btn btn-info btn-lg" role="button">
                                 <span class="glyphicon glyphicon-file"></span>
                                 <br>Entrada</a>
-                            <a href="#/messages" class="btn btn-primary btn-lg" role="button"><span class="glyphicon glyphicon-comment"></span> <br/>Mensagens</a>
+                            <a href="#/messages" class="btn btn-primary btn-lg" role="button">
+                                <span class="glyphicon glyphicon-comment"></span>
+                                <br/>Mensagens</a>
                             <a href="#/home" class="btn btn-success btn-lg" role="button">
                                 <span class="glyphicon glyphicon-tag"></span>
                                 <br>Cx. Aberto</a>
+                            <a href="#/create-vehicle" class="btn btn-success btn-lg" role="button">
+                                <span class="glyphicon glyphicon-tag"></span>
+                                <br>Veículo</a>
                         </div>
                     </div>
-                    
+                    <hr/>
+                    <div class="span4">
+                        <h1>Estoque Tanque Combustível</h1>
+                        {{posto.estoque}}% Cheio
+                        
+                        <div class="progress progress-striped active">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="{{posto.estoque}}" aria-valuemin="0" aria-valuemax="100" style="width: {{posto.estoque}}%">
+                                <span class="sr-only">{{posto.estoque}}% Complete</span>
+                            </div>
+                        </div>
+
+                    </div>
+
                 </div>
             </div>
         </div>
