AJUSTE NA  TELA E CADASTRO DE VEICULO

--- a/public/partials/_home.html
+++ b/public/partials/_home.html
@@ -4,7 +4,7 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <h3 class="panel-title">
-                        <span class="glyphicon glyphicon-bookmark"></span>ABASTECIMENTO</h3>
+                        <span class="glyphicon glyphicon-bookmark"></span> ABASTECIMENTO</h3>
                 </div>
                 <div class="panel-body">
                     <div class="row">
@@ -50,6 +50,9 @@
                             <a href="#/create-vehicle" class="btn btn-success btn-lg" role="button">
                                 <span class="glyphicon glyphicon-tag"></span>
                                 <br>Veículo</a>
+                            <a href="#/home" class="btn btn-success btn-lg" role="button">
+                                <span class="glyphicon glyphicon-cog"></span>
+                                <br>Definições</a>
                         </div>
                     </div>
                     <hr/>
