--- a/public/partials/_create-vehicle.html
+++ b/public/partials/_create-vehicle.html
@@ -12,7 +12,9 @@
                                 <input class="form-control" name="prefixo" placeholder="Prefixo" type="text" required="">
                             </div>
                         </div>
-                        <input class="form-control" name="coodigobarra" placeholder="Código de Barra" type="text" required="">
+                        <input class="form-control" name="chassi" placeholder="Chassi" type="text" required="">
+
+                        <input class="form-control" name="limitecombustiveldiario" placeholder="Limite Combustivel" type="number" required="">
                         
                         <input class="form-control" name="nomecliente" placeholder="Nome do Cliente" type="text" required="">
 
@@ -24,3 +26,14 @@
             </div>
         </div>
     </div>
+
+    <script type="text/javascript">
+
+    $('input[name="nomecliente"]').typeahead({
+          remote: '../data/films/queries/%QUERY',
+          prefetch: '../data/countries.json',
+          template:
+            '<div class="media"> <a class="pull-left" href="#"><img class="media-bject dp img-circle" src="stylesheets/img/photo.jpg" style="width: 50px;"></a><div class="media-body"><h4 lass="mediaheading">{{name}}<small> {{language}}</small></h4><h5>{{description}}</h5><hr style="margin:8px auto"></div></div>',
+          engine: Hogan                                                               
+        });
+    </script>
