ajuste na entrada de produto

--- a/public/partials/_input-supply.html
+++ b/public/partials/_input-supply.html
@@ -12,8 +12,24 @@
                                 <input class="form-control" name="lastname" placeholder="Valor Pgto do Litro" type="text" required="">
                             </div>
                         </div>
-                        <input class="form-control" name="youremail" placeholder="Marca" type="email" required="">
-                        <input class="form-control" name="reenteremail" placeholder="Placa do Caminhão" type="email" required="">
+                         <div class="row">
+                            <div class="col-xs-6 col-md-6">
+                                <input class="form-control" name="nf" placeholder="N.F." type="number" required="" autofocus="">
+                            </div>
+                            <div class="col-xs-6 col-md-6">
+                                <input class="form-control" name="tipocombustivel" placeholder="Tipo Compustível" type="text" required="">
+                            </div>
+                        </div>
+                        
+                        <div class="row">
+                            <div class="col-xs-6 col-md-6">
+                                <input class="form-control" name="valorcusto" placeholder="Valor de Custo" type="number" required="" autofocus="">
+                            </div>
+                            <div class="col-xs-6 col-md-6">
+                                <input class="form-control" name="total" placeholder="Total" type="text" required="">
+                            </div>
+                        </div>
+
                         <textarea class="form-control" name="password" placeholder="Descrição/Histórico" type="password" ></textarea>
 
                         <br>
