--- a/public/partials/_input-supply.html
+++ b/public/partials/_input-supply.html
@@ -6,15 +6,15 @@
                     <form action="#" method="post" class="form" role="form">
                         <div class="row">
                             <div class="col-xs-6 col-md-6">
-                                <input class="form-control" name="firstname" placeholder="QTDE em Litros" type="text" required="" autofocus="">
+                                <input class="form-control" name="firstname" placeholder="QTDE em Litros" type="number" required="" autofocus="">
                             </div>
                             <div class="col-xs-6 col-md-6">
-                                <input class="form-control" name="lastname" placeholder="Valor Pgto do Litro" type="text" required="">
+                                <input class="form-control" name="valorcusto" placeholder="Valor de Custo" type="number" required="" >
                             </div>
                         </div>
                          <div class="row">
                             <div class="col-xs-6 col-md-6">
-                                <input class="form-control" name="nf" placeholder="N.F." type="number" required="" autofocus="">
+                                <input class="form-control" name="nf" placeholder="N.F." type="number" required="" >
                             </div>
                             <div class="col-xs-6 col-md-6">
                                 <input class="form-control" name="tipocombustivel" placeholder="Tipo Compustível" type="text" required="">
@@ -22,11 +22,9 @@
                         </div>
                         
                         <div class="row">
+                            <div class="col-xs-6 col-md-6"></div>
                             <div class="col-xs-6 col-md-6">
-                                <input class="form-control" name="valorcusto" placeholder="Valor de Custo" type="number" required="" autofocus="">
-                            </div>
-                            <div class="col-xs-6 col-md-6">
-                                <input class="form-control" name="total" placeholder="Total" type="text" required="">
+                                <input class="form-control" name="total" placeholder="Total" type="text" required="" ng-disabled="true" value="0,00">
                             </div>
                         </div>
 
@@ -40,3 +38,13 @@
             </div>
         </div>
     </div>
+
+     <script type="text/javascript">
+    $('input[name="tipocombustivel"]').typeahead({
+          remote: '../data/films/queries/%QUERY',
+          prefetch: '../data/tipocombustivel.json',
+          template:
+            '<div class="media-body"><h4 lass="mediaheading">{{name}}</h4><hr style="margin:8px auto"></div>',
+          engine: Hogan                                                               
+        });
+    </script>
