ajuste na aceitacao de campo decimal na entrada de produto

--- a/public/partials/_input-supply.html
+++ b/public/partials/_input-supply.html
@@ -25,7 +25,7 @@
                                 <input class="form-control" name="qtdelistros" placeholder="QTDE em Litros" type="number" required="" autofocus="">
                             </div>
                             <div class="col-xs-6 col-md-6">
-                                <input class="form-control" name="valorcusto" placeholder="Valor de Custo" type="number" required="" >
+                                <input class="form-control" name="valorcusto" placeholder="Valor de Custo" type="number" step="any" required="" >
                             </div>                        
                         
                         </div>
