ajuste na retirada de combo dos numeros da tela de entrada de produto

--- a/public/partials/_input-supply.html
+++ b/public/partials/_input-supply.html
@@ -6,10 +6,10 @@
                     <form action="#" method="post" class="form" role="form">
                         <div class="row">
                             <div class="col-xs-6 col-md-6">
-                                <input class="form-control" name="nf" placeholder="N.F." type="number" required="" >
+                                <input class="form-control" name="nf" placeholder="N.F." type="text" required="" autofocus="">
                             </div>
                             <div class="col-xs-6 col-md-6">
-                                <input class="form-control" name="dataemissao" placeholder="Data de Emissão" type="date" required="" autofocus="">
+                                <input class="form-control" name="dataemissao" placeholder="Data de Emissão" type="date" required="" >
                             </div>                            
                         </div>
                         <div class="row">
@@ -22,7 +22,7 @@
                         </div>    
                         <div class="row">
                             <div class="col-xs-6 col-md-6">
-                                <input class="form-control" name="qtdelistros" placeholder="QTDE em Litros" type="number" required="" autofocus="">
+                                <input class="form-control" name="qtdelistros" placeholder="QTDE em Litros" type="text" required="">
                             </div>
                             <div class="col-xs-6 col-md-6">
                                 <input class="form-control" name="valorcusto" placeholder="Valor de Custo" type="number" step="any" required="" >
